--- a/views/includes/tumblr.jade
+++ b/views/includes/tumblr.jade
@@ -32,6 +32,6 @@ div#tumblr
 					div.center !{post.player[2].embed_code}
 					p
 						!{post.caption}
-	p.subtle
+	p.center.subtle
 		| More on 
 		a( href='http://slantback.tumblr.com/') slantback.tumblr.com
