--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,5 @@
 @import url("http://fonts.googleapis.com/css?family=Arvo");
-@import url("http://fonts.googleapis.com/css?family=GFS+Didot");
-@import url("http://fonts.googleapis.com/css?family=Raleway:600,900");
-@import url("http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic");
+@import url("http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic");
 html,
 body,
 div,
@@ -127,7 +125,7 @@ h4,
 h5,
 h6 {
   color: #666;
-  font-family: 'Noto Sans', Georgia, sans-serif;
+  font-family: 'PlayFair Display', Georgia, sans-serif;
 }
 code {
   background: rgba(0,0,0,0.05);
@@ -170,6 +168,9 @@ body {
 header {
   background: #333 url("/img/slantedDark.png") center bottom repeat-x;
   border-top: 0.25em solid #525252;
+  font-family: 'PlayFair Display', Georgia, sans-serif;
+  font-size: 125%;
+  font-style: italic;
   margin-bottom: 3em;
   padding: 0.5em;
   padding-bottom: 0;
@@ -185,7 +186,6 @@ header #logo a {
 }
 header #byline {
   color: #707070;
-  font-family: Arvo;
   margin: 0;
 }
 header #byline a {
@@ -223,11 +223,19 @@ header #hire:hover {
   clear: both;
   margin: auto;
 }
+#content h2,
+#content h3,
+#content h3 h4,
+#content h5,
+#content h6 {
+  font-family: 'PlayFair Display', Georgia, sans-serif;
+  font-weight: 400;
+}
 #content h2 {
   background: rgba(0,0,0,0.1);
   display: inline-block;
   font-size: 125%;
-  font-style: normal;
+  font-style: italic;
   font-weight: 700;
   margin-bottom: 3em;
   padding: 1em;
@@ -235,17 +243,19 @@ header #hire:hover {
 #content h3 {
   background: rgba(0,0,0,0.2);
   clear: both;
-  font-family: "Noto Sans";
   font-size: 180%;
+  font-style: italic;
+  font-weight: 900;
   padding: 0.5em;
 }
 #content h4 {
   clear: both;
   font-size: 140%;
+  font-style: italic;
   font-weight: 700;
 }
 #content h5 {
-  font-weight: bold;
+  font-style: italic;
   margin: 0;
 }
 footer {
@@ -255,65 +265,10 @@ footer {
   padding-top: 5em;
   text-align: center;
 }
-/* =Blog */
-.blog {
-  color: #999;
-  font-size: 125%;
-  line-height: 160%;
-  margin-bottom: 3em;
-  text-align: left;
-}
-.blog h4 {
-  margin: 0;
-}
-.blog h4 a {
-  color: #444;
-  font-family: 'Noto Sans', Georgia, sans-serif;
-  display: inline;
-  text-decoration: none;
-}
-.blog h4 a:hover {
-  text-decoration: underline;
-}
-.blogPreview {
-  background: rgba(0,0,0,0.05);
-  overflow: hidden;
-  padding: 1em;
-  padding-bottom: 0;
-}
-.meta {
-  clear: both;
-  color: #b8b8b8;
-  font-size: 75%;
-  margin: 0;
-}
-.meta a {
-  color: #b8b8b8;
-}
-.meta a:hover {
-  text-decoration: underline;
-}
-#blogList {
-  clear: both;
-  text-align: left;
-}
-#blogList ul.list li {
-  border-top: 1px solid rgba(0,0,0,0.05);
-  display: block;
-  margin: 0;
-  padding: 1em;
-}
-#blogList ul.list li.active {
-  background: rgba(0,0,0,0.05);
-}
-#blogList ul.list li.active a {
-  color: #444;
-  text-decoration: none;
-}
-#blogList ul.list li .meta {
-  float: right;
-}
 /* =tumblr */
+#tumblr h3 {
+  background: transparent;
+}
 #tumblr ul.posts {
   margin-bottom: 2em;
 }
@@ -391,12 +346,6 @@ footer {
 #portfolio a:hover h4 {
   color: #333;
 }
-#portfolio h3,
-#portfolio h4,
-#portfolio h5 {
-  font-family: "Raleway";
-  font-weight: 900;
-}
 #portfolio .heart {
   color: #f00;
 }
@@ -413,12 +362,6 @@ footer {
   margin: auto;
   max-width: 45em;
   padding: 1em 2em;
-}
-#pagePiece h3,
-#pagePiece h4,
-#pagePiece h5 {
-  font-family: "Raleway";
-  font-weight: 900;
 }
 #pagePiece h4 {
   padding-top: 2em;
@@ -495,10 +438,6 @@ footer {
 }
 a .thumb:hover {
   background-color: #333;
-}
-/* =Boxer =Modal */
-#boxer .boxer-close {
-  display: none;
 }
 /* =Media =Queries */
 @media all and (max-device-width: 751px) {
